test/errors/error45.vult
fun foo (x) {
  match (x) {
    (1, 2) -> return 0;
    _ -> return 2;
  }
}
